bk_ida/gccida/g2/legitimize_pic_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5477:4: error: expected ';' after expression
rtx v12; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5477:5: error: use of undeclared identifier 'v12'
rtx v12; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5486:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5486:5: error: use of undeclared identifier 'v21'
rtx v21; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5495:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5495:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5501:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5501:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5506:38: error: use of undeclared identifier 'machine_mode'
v5 = local_symbolic_operand( orig, ( machine_mode)reg); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5516:33: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_fmt_Ei( UNSPEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v18, 15); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5517:31: error: use of undeclared identifier 'machine_mode'
v20 = gen_rtx_fmt_e( CONST, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v19); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5518:22: error: use of undeclared identifier 'machine_mode'
v21 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v20); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5518:1: error: use of undeclared identifier 'v21'
v21 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v20); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5519:7: error: use of undeclared identifier 'set_31'; did you mean 'set_of'?
v22 = set_31; 
      ^~~~~~
      set_of
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5520:14: error: use of undeclared identifier 'v21'
*( ( _BYTE *)v21 + 3) |= 4u; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5521:7: error: use of undeclared identifier 'v21'
v23 = v21; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5524:1: error: use of undeclared identifier 'set_31'
set_31 = new_alias_set( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5525:7: error: use of undeclared identifier 'set_31'; did you mean 'set_of'?
v22 = set_31; 
      ^~~~~~
      set_of
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/i386.c:5529:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/legitimize_pic_address/src/obj/i386.o] Error 1
